--- a/index.html
+++ b/index.html
@@ -3,124 +3,88 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyStudySpire Notes</title>
+  <title>MyStudySpire - Notes</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom right, #e6f7ff, #ccf2ff);
+      background: #e6f7ff;
       margin: 0;
       padding: 0;
       text-align: center;
     }
-    header {
-      background: #007bff;
-      padding: 15px;
-      color: white;
-      font-size: 24px;
-      font-weight: bold;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    }
     .container {
       max-width: 900px;
-      margin: 20px auto;
-      background: white;
+      margin: 30px auto;
+      background: #fff;
       padding: 20px;
-      border-radius: 10px;
+      border-radius: 15px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
     h2 {
-      color: #007bff;
-      margin-bottom: 20px;
+      color: #0073e6;
     }
-    .subjects {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-    }
-    .subjects a {
+    .btn {
       display: inline-block;
-      padding: 12px 25px;
-      background: #007bff;
+      margin: 8px;
+      padding: 12px 24px;
+      background: #0073e6;
       color: white;
-      text-decoration: none;
       font-weight: bold;
+      text-decoration: none;
       border-radius: 8px;
       transition: 0.3s;
     }
-    .subjects a:hover {
-      background: #0056b3;
+    .btn:hover {
+      background: #005bb5;
     }
     footer {
       margin: 20px 0;
-      color: #555;
+      color: #444;
       font-size: 14px;
     }
   </style>
 </head>
 <body>
 
-  <header>📘 MyStudySpire Notes</header>
-
-  <!-- Class 6 -->
-  <div class="container">
-    <h2>📘 Class 6 Notes</h2>
-    <div class="subjects">
-      <a href="#">Mathematics</a>
-      <a href="#">Science</a>
-      <a href="#">English</a>
-      <a href="#">Social Science</a>
-      <a href="#">Hindi</a>
-    </div>
-  </div>
-
   <!-- Class 7 -->
   <div class="container">
     <h2>📘 Class 7 Notes</h2>
-    <div class="subjects">
-      <a href="#">Mathematics</a>
-      <a href="#">Science</a>
-      <a href="#">English</a>
-      <a href="#">History</a>
-      <a href="#">Geography</a>
-    </div>
+    <a href="class7-mathematics.html" class="btn">Mathematics</a>
+    <a href="class7-science.html" class="btn">Science</a>
+    <a href="class7-english.html" class="btn">English</a>
+    <a href="class7-history.html" class="btn">History</a>
+    <a href="class7-geography.html" class="btn">Geography</a>
   </div>
 
   <!-- Class 8 -->
   <div class="container">
     <h2>📘 Class 8 Notes</h2>
-    <div class="subjects">
-      <a href="#">Mathematics</a>
-      <a href="#">Science</a>
-      <a href="#">English</a>
-      <a href="#">Sanskrit</a>
-      <a href="#">Computer</a>
-    </div>
+    <a href="class8-mathematics.html" class="btn">Mathematics</a>
+    <a href="class8-science.html" class="btn">Science</a>
+    <a href="class8-english.html" class="btn">English</a>
+    <a href="class8-sanskrit.html" class="btn">Sanskrit</a>
+    <a href="class8-computer.html" class="btn">Computer</a>
   </div>
 
   <!-- Class 9 -->
   <div class="container">
     <h2>📘 Class 9 Notes</h2>
-    <div class="subjects">
-      <a href="#">Mathematics</a>
-      <a href="#">Physics</a>
-      <a href="#">Chemistry</a>
-      <a href="#">Biology</a>
-      <a href="#">English</a>
-    </div>
+    <a href="class9-mathematics.html" class="btn">Mathematics</a>
+    <a href="class9-physics.html" class="btn">Physics</a>
+    <a href="class9-chemistry.html" class="btn">Chemistry</a>
+    <a href="class9-biology.html" class="btn">Biology</a>
+    <a href="class9-english.html" class="btn">English</a>
   </div>
 
   <!-- Class 10 -->
   <div class="container">
     <h2>📘 Class 10 Notes</h2>
-    <div class="subjects">
-      <a href="#">Mathematics</a>
-      <a href="#">Physics</a>
-      <a href="#">Chemistry</a>
-      <a href="#">Biology</a>
-      <a href="#">English</a>
-      <a href="#">Computer Science</a>
-    </div>
+    <a href="class10-physics.html" class="btn">Physics</a>
+    <a href="class10-chemistry.html" class="btn">Chemistry</a>
+    <a href="class10-biology.html" class="btn">Biology</a>
+    <a href="class10-mathematics.html" class="btn">Mathematics</a>
+    <a href="class10-english.html" class="btn">English</a>
+    <a href="class10-computerscience.html" class="btn">Computer Science</a>
   </div>
 
   <footer>
