--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       font-weight: bold;
       letter-spacing: 2px;
     }
+    header a {
+      color: white;
+      text-decoration: none;
+    }
+    header a:hover {
+      text-decoration: underline;
+    }
     nav {
       background: #2563EB;
       padding: 10px;
@@ -72,7 +79,7 @@
 
   <!-- Header -->
   <header>
-    MYSTUDYSPIRE
+    <a href="index.html">MYSTUDYSPIRE</a>
   </header>
 
   <!-- Navigation -->
@@ -95,16 +102,4 @@
        ⬇️ Download PDF
     </a>
 
-    <!-- Embedded PDF Viewer -->
-    <iframe src="https://drive.google.com/file/d/1-AwKeQ-ogStGebIdmb1U9nGpkqM2jgnq/preview"
-            allow="autoplay">
-    </iframe>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    © 2025 MYSTUDYSPIRE | All Rights Reserved
-  </footer>
-
-</body>
-</html>
+    <!--
