--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f9fafb;
+      background: linear-gradient(to right, #e0f2fe, #f0f9ff);
+      text-align: center;
     }
     header {
       background: #1E3A8A;
       color: white;
-      padding: 15px;
-      text-align: center;
-      font-size: 28px;
+      padding: 20px;
+      font-size: 32px;
       font-weight: bold;
       letter-spacing: 2px;
     }
@@ -27,51 +27,47 @@
     header a:hover {
       text-decoration: underline;
     }
-    nav {
-      background: #2563EB;
-      padding: 10px;
-      text-align: center;
-    }
-    nav a {
+    .hero {
+      background: url('https://cdn.pixabay.com/photo/2017/01/20/00/30/books-1997565_1280.jpg') no-repeat center;
+      background-size: cover;
+      height: 250px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-size: 18px;
+      font-size: 36px;
       font-weight: bold;
+      text-shadow: 2px 2px 5px black;
     }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    section {
-      padding: 20px;
+    .class-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      padding: 40px;
       max-width: 1000px;
       margin: auto;
     }
-    h2 {
-      color: #1E3A8A;
-    }
-    .download-btn {
-      display: inline-block;
-      text-decoration: none;
-      color: white;
-      background: #1E3A8A;
-      padding: 10px 15px;
-      border-radius: 8px;
-      margin-bottom: 15px;
+    .class-card {
+      background: white;
+      border-radius: 15px;
+      padding: 40px 20px;
+      font-size: 22px;
       font-weight: bold;
+      color: #1E3A8A;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+      cursor: pointer;
     }
-    iframe {
-      width: 100%;
-      height: 600px;
-      border: 1px solid #ccc;
-      border-radius: 10px;
+    .class-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 10px rgba(0,0,0,0.2);
+      background: #f0f9ff;
     }
     footer {
       background: #1E3A8A;
       color: white;
-      text-align: center;
-      padding: 10px;
-      margin-top: 20px;
+      padding: 15px;
+      margin-top: 30px;
     }
   </style>
 </head>
@@ -82,24 +78,24 @@
     <a href="index.html">MYSTUDYSPIRE</a>
   </header>
 
-  <!-- Navigation -->
-  <nav>
-    <a href="#class6">Class 6</a>
-    <a href="#class7">Class 7</a>
-    <a href="#class8">Class 8</a>
-    <a href="#class9">Class 9</a>
-    <a href="#class10">Class 10</a>
-  </nav>
+  <!-- Hero Section with Background Image -->
+  <div class="hero">
+    Learn • Explore • Grow
+  </div>
 
-  <!-- Main Content -->
-  <section id="class7">
-    <h2>📘 Class 7 Math – Chapter 1 Notes</h2>
+  <!-- Classes Section -->
+  <div class="class-container">
+    <div class="class-card" onclick="location.href='class6.html'">Class 6</div>
+    <div class="class-card" onclick="location.href='class7.html'">Class 7</div>
+    <div class="class-card" onclick="location.href='class8.html'">Class 8</div>
+    <div class="class-card" onclick="location.href='class9.html'">Class 9</div>
+    <div class="class-card" onclick="location.href='class10.html'">Class 10</div>
+  </div>
 
-    <!-- Download Button -->
-    <a href="https://drive.google.com/file/d/1-AwKeQ-ogStGebIdmb1U9nGpkqM2jgnq/view?usp=sharing" 
-       target="_blank" 
-       class="download-btn">
-       ⬇️ Download PDF
-    </a>
+  <!-- Footer -->
+  <footer>
+    © 2025 MYSTUDYSPIRE | All Rights Reserved
+  </footer>
 
-    <!--
+</body>
+</html>
