--- a/index.html
+++ b/index.html
@@ -1,94 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MYSTUDYSPIRE</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #f0f9ff, #e0f2fe);
-      text-align: center;
-    }
-    header {
-      background: #1E3A8A;
-      color: white;
-      padding: 20px;
-      font-size: 32px;
-      font-weight: bold;
-      letter-spacing: 2px;
-    }
-    header a {
-      color: white;
-      text-decoration: none;
-    }
-    header a:hover {
-      text-decoration: underline;
-    }
-    .hero {
-      padding: 40px 20px;
-      font-size: 28px;
-      font-weight: bold;
-      color: #1E3A8A;
-    }
-    .class-list {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      max-width: 400px;
-      margin: auto;
-      padding: 30px;
-    }
-    .class-link {
-      background: white;
-      padding: 15px;
-      border-radius: 10px;
-      font-size: 22px;
-      font-weight: bold;
-      color: #1E3A8A;
-      text-decoration: none;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      transition: 0.3s;
-    }
-    .class-link:hover {
-      background: #f0f9ff;
-      transform: translateY(-3px);
-    }
-    footer {
-      background: #1E3A8A;
-      color: white;
-      padding: 15px;
-      margin-top: 40px;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>MYSTUDYSPIRE</title>
+<style>
+  body { font-family: Arial; margin:0; background:#f0f4f8; }
+  header { background:#4CAF50; color:white; padding:20px; text-align:center; font-size:28px; font-weight:bold; cursor:pointer; }
+  .container { padding:20px; display:flex; flex-wrap:wrap; justify-content:center; gap:20px; }
+  .card { background:white; width:200px; padding:20px; text-align:center; border-radius:10px; box-shadow:0 4px 6px rgba(0,0,0,0.1); cursor:pointer; transition:0.2s; }
+  .card:hover { transform:translateY(-5px); }
+  .hidden { display:none; }
+  .chapter { background:white; margin:10px 0; padding:15px; border-radius:8px; box-shadow:0 2px 4px rgba(0,0,0,0.1); display:flex; justify-content:space-between; align-items:center; }
+  .chapter a { text-decoration:none; background:#4CAF50; color:white; padding:8px 12px; border-radius:5px; }
+  .back-btn { margin:20px; background:#4CAF50; color:white; padding:8px 12px; border-radius:5px; cursor:pointer; display:inline-block; }
+  .graphic { text-align:center; margin:20px 0; }
+  .graphic img { width:300px; max-width:90%; }
+</style>
 </head>
 <body>
 
-  <!-- Header -->
-  <header>
-    <a href="index.html">MYSTUDYSPIRE</a>
-  </header>
+<header onclick="showHome()">MYSTUDYSPIRE</header>
 
-  <!-- Hero Section -->
-  <div class="hero">
-    Welcome to MYSTUDYSPIRE – Select Your Class
+<!-- HOME -->
+<div id="home">
+  <div class="graphic">
+    <img src="https://i.ibb.co/3Wn3DqT/study-graphic.png" alt="Student Studying">
   </div>
-
-  <!-- Classes List -->
-  <div class="class-list">
-    <a href="class6.html" class="class-link">Class 6</a>
-    <a href="class7.html" class="class-link">Class 7</a>
-    <a href="class8.html" class="class-link">Class 8</a>
-    <a href="class9.html" class="class-link">Class 9</a>
-    <a href="class10.html" class="class-link">Class 10</a>
+  <div class="container" id="classes-container">
+    <!-- Classes will appear here -->
   </div>
+</div>
 
-  <!-- Footer -->
-  <footer>
-    © 2025 MYSTUDYSPIRE | All Rights Reserved
-  </footer>
+<!-- SUBJECTS -->
+<div id="subjects" class="hidden">
+  <span class="back-btn" onclick="showHome()">⬅ Back to Classes</span>
+  <div class="container" id="subjects-container"></div>
+</div>
+
+<!-- CHAPTERS -->
+<div id="chapters" class="hidden">
+  <span class="back-btn" onclick="backToSubjects()">⬅ Back to Subjects</span>
+  <div class="container" id="chapters-container" style="flex-direction:column;"></div>
+</div>
+
+<script>
+// DATA
+const classesData = {
+  "Class 6": ["Math", "Science", "English", "Social Science"],
+  "Class 7": ["Math", "Science", "English", "Social Science"],
+  "Class 8": ["Math", "Science", "English", "Social Science"]
+};
+
+const chaptersData = {
+  "Math": ["Chapter 1: Numbers", "Chapter 2: Whole Numbers", "Chapter 3: Playing with Numbers"],
+  "Science": ["Chapter 1: Food", "Chapter 2: Components of Food", "Chapter 3: Fibre to Fabric"],
+  "English": ["Chapter 1: Fun They Had", "Chapter 2: The Sound of Music", "Chapter 3: The Little Girl"],
+  "Social Science": ["Chapter 1: History", "Chapter 2: Geography", "Chapter 3: Civics"]
+};
+
+// Populate Classes on Home
+const classesContainer = document.getElementById('classes-container');
+Object.keys(classesData).forEach(className => {
+  const div = document.createElement('div');
+  div.className = 'card';
+  div.textContent = className;
+  div.onclick = () => showSubjects(className);
+  classesContainer.appendChild(div);
+});
+
+// Functions
+let currentClass = '';
+
+function showHome() {
+  document.getElementById('home').classList.remove('hidden');
+  document.getElementById('subjects').classList.add('hidden');
+  document.getElementById('chapters').classList.add('hidden');
+}
+
+function showSubjects(className) {
+  currentClass = className;
+  const container = document.getElementById('subjects-container');
+  container.innerHTML = '';
+  classesData[className].forEach(subject => {
+    const div = document.createElement('div');
+    div.className = 'card';
+    div.textContent = subject;
+    div.onclick = () => showChapters(subject);
+    container.appendChild(div);
+  });
+  document.getElementById('home').classList.add('hidden');
+  document.getElementById('subjects').classList.remove('hidden');
+  document.getElementById('chapters').classList.add('hidden');
+}
+
+function showChapters(subject) {
+  const container = document.getElementById('chapters-container');
+  container.innerHTML = '';
+  chaptersData[subject].forEach((chapter,index) => {
+    const div = document.createElement('div');
+    div.className = 'chapter';
+    div.innerHTML = `${chapter} <a href="#" onclick="alert('Replace with PDF link')">Download</a>`;
+    container.appendChild(div);
+  });
+  document.getElementById('subjects').classList.add('hidden');
+  document.getElementById('chapters').classList.remove('hidden');
+}
+
+function backToSubjects() {
+  document.getElementById('subjects').classList.remove('hidden');
+  document.getElementById('chapters').classList.add('hidden');
+}
+</script>
 
 </body>
 </html>
