--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ header { background:#4CAF50; color:white; padding:20px; text-align:center; font-
 
 <header onclick="showHome()">MYSTUDYSPIRE</header>
 
+<!-- HOME -->
 <div id="home">
   <div class="graphic">
     <img src="https://i.ibb.co/3Wn3DqT/study-graphic.png" alt="Student Studying">
@@ -29,11 +30,13 @@ header { background:#4CAF50; color:white; padding:20px; text-align:center; font-
   <div class="container" id="classes-container"></div>
 </div>
 
+<!-- SUBJECTS -->
 <div id="subjects" class="hidden">
   <span class="back-btn" onclick="showHome()">⬅ Back to Classes</span>
   <div class="container" id="subjects-container"></div>
 </div>
 
+<!-- CHAPTERS -->
 <div id="chapters" class="hidden">
   <span class="back-btn" onclick="backToSubjects()">⬅ Back to Subjects</span>
   <div class="container" id="chapters-container" style="flex-direction:column;"></div>
@@ -44,7 +47,9 @@ header { background:#4CAF50; color:white; padding:20px; text-align:center; font-
 const classesData = {
   "Class 6": ["Math", "Science", "English", "Social Science"],
   "Class 7": ["Math", "Science", "English", "Social Science"],
-  "Class 8": ["Math", "Science", "English", "Social Science"]
+  "Class 8": ["Math", "Science", "English", "Social Science"],
+  "Class 9": ["Math", "Science", "English", "Social Science"],
+  "Class 10": ["Math", "Science", "English", "Social Science"]
 };
 
 const chaptersData = {
@@ -63,3 +68,49 @@ Object.keys(classesData).forEach(cls => {
   div.onclick = () => showSubjects(cls);
   classesContainer.appendChild(div);
 });
+
+let currentClass = '';
+
+function showHome() {
+  document.getElementById('home').classList.remove('hidden');
+  document.getElementById('subjects').classList.add('hidden');
+  document.getElementById('chapters').classList.add('hidden');
+}
+
+function showSubjects(cls) {
+  currentClass = cls;
+  const container = document.getElementById('subjects-container');
+  container.innerHTML = '';
+  classesData[cls].forEach(subject => {
+    const div = document.createElement('div');
+    div.className = 'card';
+    div.textContent = subject;
+    div.onclick = () => showChapters(subject);
+    container.appendChild(div);
+  });
+  document.getElementById('home').classList.add('hidden');
+  document.getElementById('subjects').classList.remove('hidden');
+  document.getElementById('chapters').classList.add('hidden');
+}
+
+function showChapters(subject) {
+  const container = document.getElementById('chapters-container');
+  container.innerHTML = '';
+  chaptersData[subject].forEach((chapter,index) => {
+    const div = document.createElement('div');
+    div.className = 'chapter';
+    div.innerHTML = `${chapter} <a href="#" onclick="alert('Replace with PDF link')">Download</a>`;
+    container.appendChild(div);
+  });
+  document.getElementById('subjects').classList.add('hidden');
+  document.getElementById('chapters').classList.remove('hidden');
+}
+
+function backToSubjects() {
+  document.getElementById('subjects').classList.remove('hidden');
+  document.getElementById('chapters').classList.add('hidden');
+}
+</script>
+
+</body>
+</html>
